Added experience section

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			            <h2>Data Analyst</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://github.com/arorni" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="https://github.com/arorni" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -284,13 +284,13 @@
         </div>
 
 		<div class="row">
-			<h1 class="big-4">Recent Experience</h1>
+			<h1 class="big-4">Recent Professional Experience</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
 		
 		<div class="row">
-				<div class="col-md-6">
+				<div class="row justify-content-center">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Mar 2025 - Nov 2025</span>
 						<h2>Marketing Data Analyst</h2>
@@ -305,54 +305,97 @@
 					</div>
 
 				</div>
+		</div>
 
+		<div class="row">
+			<h1 class="big-4">Technical Projects/Open-Source Contribution</h1>
+			<div class="underline"></div>
+		</div>
+		<br>
+		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Jun 2024 - Feb 2025</span>
+						<span class="date">Dec 2024 - Feb 2025</span>
 						<h2>Data Analyst</h2>
 						<span class="position">Solar Energy Watch (Open-Source Project)</span>
 						<p class="mt-4">
 							<ul>
 								<li>Conducted in-depth exploratory and trend analysis on the Global Solar Power Tracker dataset using Python (Pandas, Matplotlib) to assess global solar farm capacity growth, technology adoption patterns, and regional trends</li>
 								<li>Built a Python package to automate CAMS data extraction via PVLib, streamlining solar irradiance integration for energy modeling and forecasting.</li>
-								<li>Delivered data-driven insights to multi-disciplinary research teams to support long-term sustainability planning.</li>
 							</ul>
 						</p>
 					</div>
 
 				</div>
-			</div>
-		
 
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">Jun 2024 - Sep 2024</span>
+						<h2>Data Analyst</h2>
+						<span class="position">Dreamline AI</span>
+						<p class="mt-4">
+							<ul>
+								<li>Fetched data from multiple sources using APIs and Beautiful Soup; 
+									cleaned, analyzed, and conducted thorough investigations of data transmission issues to ensure data quality and consistency.</li>
+								<li>Used python for Geocoding, mapping, and management of property/business owner data to green zones, leading effective deployment of capital in green energy initiatives.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+		</div>
 		<br>
 
 		<div class="row">
 			<h1 class="big-4">Earlier Professional Experience</h1>
 			<div class="underline"></div>
 		</div>
-		<div class="row justify-content-center">
-  			<div class="col-md-10 col-lg-8">
+		<br>
+
+		<div class="row">
+  			<div class="row justify-content-center">
     			<div class="resume-wrap ftco-animate">
       				<span class="date">2006 – 2012</span>
       				<h2>Prior Software Engineering &amp; Consulting Experience</h2>
-      				<p class="mt-4">
-        				<strong>Senior Software Engineer (Saggezza India)</strong>
+					<span class="position">Senior Software Engineer (Saggezza India)</span>
         					<ul>
           						<li>Led development of a high-performance network data acceleration platform, improving transmission efficiency by 40%.</li>
           						<li>Modernized legacy mainframe communication systems into scalable Perl modules, reducing maintenance by 70%.</li>
           						<li>Coordinated timelines and deliverables as technical lead.</li>
         					</ul>
-
-        				<strong>Consultant (Golman Sachs and Capgemini)</strong>
+        			<span class="position">Consultant (Golman Sachs and Capgemini)</span>
         					<ul>
           						<li>Built C++-based derivative trade reconciliation systems for financial institutions, improving operational efficiency.</li>
           						<li>Designed real-time notification systems replacing manual Excel workflows and improving processing speed by 30%.</li>
         					</ul>
-      				</p>
     			</div>
   			</div>
 		</div>	
 		<br>
+
+		<div class="row">
+			<h1 class="big-4">Community & Volunteer Experience</h1>
+			<div class="underline"></div>
+		</div>
+		<br>
+		
+		<div class="row">
+				<div class="row justify-content-center">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">Sep 2024 - Dec 2024</span>
+						<h2>Volunteer</h2>
+						<span class="position">DFW-ATW (Alliance of Technology and Women) </span>
+						<p class="mt-4">
+							<ul>
+								<li>Volunteered across multiple roles to ensure smooth execution of technology and career-development events, from pre-event preparation to on-site coordination.</li>
+								<li>Supported programs aimed at empowering women through Salesforce and technology upskilling, assisting with participant onboarding and engagement.</li>
+								<li>Partnered cross-functionally with Risk, Product, and Marketing to define requirements, align business objectives, and track project milestones.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+		</div>
 
 		<div class="row">
 			<h1 class="big-4">Education</h1>
@@ -368,7 +411,6 @@
     					<span class="position">University of Texas at Dallas</span>
     					<p class="mt-4">
 							<ul>
-								<li>Grade: 3.94</li>
 								<li>Scholar With High Distinction.</li>
 								<li>Phi Kappa Phi, Beta Gamma Sigma</li>
 							</ul>
