--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 						<p class="mt-4">
 							<ul>
 								<li>Delivered executive-ready dashboards in Power BI and Snowflake,analyzing lender performance across APR, CTR, and offer conversion metrics to support strategic marketing decisions.</li>
-								<li>Developed a Power BI dashboard for APR comparisons and a Python automation to resolve recurring month-end reconciliation issues, significantly reducing manual effort by 1.5 hours/month.</li>
-								<li>Partnered cross-functionally with Risk, Product, and Marketing to define requirements, align business objectives, and track project milestones.</li>
+								<li>Developed a Power BI dashboard for APR comparisons and a Python automation to resolve recurring month-end reconciliation issues, significantly reducing manual effort by 20%.</li>
+								<li> Partnered with Risk, Product, and Marketing teams to onboard a new partner offering, supporting workflow design and cross-team alignment.</li>
 							</ul>
 						</p>
 					</div>
